# jupyter-ai-tabby

./: .gitignore  .jupyter_ystore.db  LICENSE  README.md  pyproject.toml  requirements.txt
jupyter_ai_tabby/: __init__.py  llm.py  models.py  provider.py
jupyter_ai_tabby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jupyter_ai_tabby/.ipynb_checkpoints/: llm-checkpoint.py  provider-checkpoint.py
jupyter_ai_tabby/tests/: __init__.py
